<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_picture"
        android:layout_width="117dp"
        android:layout_height="117dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_ucomplex" />

    <ImageView
        android:layout_width="22dp"
        android:layout_height="28dp"
        android:src="@drawable/ic_unlock"
        android:layout_marginStart="24dp"
        android:id="@+id/block"
        android:layout_alignTop="@+id/profile_picture"
        android:layout_toEndOf="@+id/profile_picture"
        android:layout_marginTop="44dp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_picture"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:drawablePadding="6dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:maxWidth="200dp"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="22sp" />

    <Button
        android:id="@+id/add_friend_button"
        android:layout_width="160dp"
        android:layout_height="36dp"
        android:layout_below="@+id/name"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="13dp"
        android:foreground="?attr/selectableItemBackground"
        android:layout_marginTop="25dp"
        android:background="@drawable/corner_white"
        android:drawableStart="@drawable/ic_add_as_friend"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/add_to_friends"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="14.0sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/message_button"
        android:layout_width="160dp"
        android:layout_height="36dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/name"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="25dp"
        android:foreground="?attr/selectableItemBackground"
        android:background="@drawable/textview_border_round_corner"
        android:text="@string/message"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold" />
</RelativeLayout>