...
    <string name="error_while_choosing_file">Ошибка при выборе файла</string>
    <string name="Done">Готово</string>
    <string name="name_cant_be_empty">Название не может быть пустым.</string>
    <string name="error_renaming_file">Ошибка при переименовании</string>
    <string name="write_message">Написать сообщение</string>
    <string name="add_to_friends">В друзья</string>
    <string name="remove_friend">Убрать</string>
    <string name="unblock">Разблокировать</string>
    <string name="teachers">Преподаватели</string>
    <string name="offline_mode">Оффлайн режим</string>
    <string name="default_event_name">UComplex</string>
    <string name="message">Сообщение</string>
    <string name="event_protocol_zanyatiya">протокол занятия</string>
...
